fixed contrast errors

--- a/css/styles.css
+++ b/css/styles.css
@@ -145,7 +145,7 @@ header h1 {
   font-size: 1.6rem;
   font-weight: 400;
   padding-left: 0.5rem;
-  color: #F2785C;
+  color: #733042;
 }
 header button {
   width: 48px;
@@ -193,7 +193,7 @@ nav ul li a:hover {
   color: #F2DCE4;
 }
 nav li.active a {
-  color: #F2785C;
+  color: #F26B5E;
 }
 
 /* MAIN  */
@@ -205,7 +205,7 @@ main p {
 main h1 {
   padding: 1rem 2vw 0.5rem 2vw;
   font-size: 1.5rem;
-  color: #F26B5E;
+  color: #733042;
   font-weight: 400;
 }
 
